# mail-admin-v2

./: .gitattributes  .gitignore  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt
config/: error_dictionary.json
contrib/: mail-admin-v2-reputation-snapshot  mail-admin-v2-reputation.service  mail-admin-v2-reputation.timer
deploy/: sudoers.mail-admin-v2
routers/: activity.py  blacklist.py  cron.py  filters.py  forwards.py  mailboxes.py  providers.py  quarantine.py  reputation.py  sendas.py  suppression.py
services/: audit.py  brevo_suppression.py  csrf.py  db.py  dnsbl.py  error_translator.py  exim.py  exim_filters.py  hestia.py  mailbox_stats.py  mailboxes.py  maildir.py  providers.py  quarantine.py  reputation.py  sendas.py  templates.py
systemd/: README.md  mail-admin-v2-dnsbl-snapshot.service  mail-admin-v2-dnsbl-snapshot.timer  mail-admin-v2-mailbox-stats.service  mail-admin-v2-mailbox-stats.timer
templates/: base.html  login.html  verify.html
tests/: conftest.py  test_activity_body.py  test_activity_endpoint.py  test_audit.py  test_auth_flow.py  test_blacklist_router.py  test_brevo_suppression.py  test_cmdk_registry.py  test_components_render.py  test_cron_dnsbl.py  test_cron_router.py  test_csrf.py  test_db_singleton.py  test_dnsbl.py  test_error_handler.py  test_error_translator.py  test_error_translator_fallback.py  test_exim_extension.py  test_exim_filters.py  test_exim_parser.py  test_filters_router.py  test_hestia_async.py  test_hestia_read.py  test_hestia_write.py  test_mailbox_stats.py  test_mailbox_template_render.py  (+24 more)
(+58 files in other folders)
